--- a/user/src/main/res/values/strings.xml
+++ b/user/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="user_disconnection">Disconnection</string>
     <string name="user_deny">Can\'t login you</string>
     <string name="user_impossible_connect_server">Impossible to connect to The Movie DB</string>
+    <string name="user_impossible_disconnect_you">Impossible to disconnect you from The Movie DB</string>
 </resources>
